# haemwend

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  Justfile  README.md  flake.nix  icon.svg.import  project.godot  pyproject.toml
.github/workflows/: performance-gate.yml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
assets/: .gitignore
assets/blender_ai/: AGENT.md  README.md  blender_utils.py  table.py
assets/blender_ai/presets/: editor_presets.ron
assets/blender_ai/presets/table/: table_preset.ron
assets/models/: table.glb
config/: blender_ai_models.ron  game_config.ron  sandbox.toml
config/scenarios/: arena.ron  canyon.ron  gauntlet.ron  greenwood.ron  highlands.ron
docs/: TODO.md  animaties.md  hardware-architectuur.md  hot-reload.md  mist.md  ontwikkel-richtlijnen.md  performance-budget-template.md  performance-ci-gate.md  skybox.md  software-architecture.md
docs/articles/: test.constitution.md
docs/bevy-0.18.0-docs/: typos.toml
docs/bevy-0.18.0-docs/content/learn/contribute/: introduction.md
docs/bevy-0.18.0-docs/content/learn/migration-guides/: 0.10-to-0.11.md  0.11-to-0.12.md  0.12-to-0.13.md  0.16-to-0.17.md  (+7 more)
docs/bevy-0.18.0-docs/generate-assets/: Cargo.toml
docs/bevy-0.18.0-docs/generate-errors/: Cargo.toml
docs/bevy-0.18.0-docs/learning-code-examples/: README.md
docs/bevy-0.18.0-docs/write-rustdoc-hide-lines/: README.md
docs/panda3d/: README.md  requirements.txt
docs/panda3d/_templates/autosummary/: panda3d-class.rst
perf/: scenarios.ron
scripts/: compare_perf_results.py  dev_game.sh
specs/001-create-an-initial/: quickstart.md  spec.md  tasks.md
specs/001-create-an-initial/checklists/: requirements.md
src/: lib.rs  main.rs
src/blender_model_editor/: camera.rs  editor.rs  jobs.rs  mod.rs  model.rs  preview.rs  state.rs  ui.rs
src/game/: components.rs  gameplay_physics.rs  io_and_scenarios.rs  mod.rs  settings.rs  types.rs  ui_and_flow.rs
src/haemwend/: __init__.py  main.py
src/haemwend/infrastructure/: __init__.py  config_loader.py  logging.py
src/haemwend/sandbox/: __init__.py  app.py  camera.py  character.py  environment.py  runtime.py  ui.py
src/haemwend/sandbox/gameplay/: __init__.py  abilities.py  classes.py
tests/haemwend/: test_main.py  test_runtime_display.py
(+65 files in other folders)
