[package]
name = "haemwend"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
bevy = "0.18.0"
bevy_asset_loader = "0.25.0"
bevy_ecs_ldtk = "0.14.0"
bevy_egui = "0.39.1"
bevy_hanabi = "0.18.0"
bevy_kira_audio = "0.25.0"
bevy_mod_picking = "0.20.1"
bevy_pkv = "0.15.0"
bevy_prototype_lyon = "0.16.0"
bevy_rapier3d = "0.32.0"
bevy_tweening = "0.15.0"
leafwing-input-manager = "0.20.0"
rand = "0.10.0"
ron = "0.12.0"
serde = "1.0.228"
thiserror = "2.0.18"
tracing = "0.1.44"
uuid = "1.21.0"

[dev-dependencies]
approx = "0.5.1"
bevy-inspector-egui = "0.36.0"
bevy_editor_pls = "0.10.0"
bevy_framepace = "0.21.0"
bevy_mod_debugdump = "0.15.0"
bevy_screen_diagnostics = "0.8.1"
criterion = "0.8.2"
insta = "1.46.3"
pretty_assertions = "1.4.1"
proptest = "1.10.0"
rstest = "0.26.1"
tracing-subscriber = "0.3.22"
