[package]
name = "haemwend"
version = "0.1.0"
edition = "2024"
default-run = "haemwend"

[dependencies]
anyhow = "1.0.102"
bevy = "0.18.0"
bevy_asset_loader = "0.25.0"
bevy_ecs_ldtk = "0.14.0"
bevy_egui = { version = "0.39.1", default-features = false, features = ["default_fonts", "render", "bevy_ui"] }
bevy_hanabi = { version = "0.18.0", default-features = false, features = ["3d", "serde"] }
bevy_kira_audio = { version = "0.25.0", default-features = false, features = ["ogg"] }
bevy_mod_picking = { version = "0.20.1", default-features = false, features = ["backend_raycast", "selection", "highlight"] }
bevy_pkv = "0.15.0"
bevy_prototype_lyon = "0.16.0"
bevy_rapier3d = { version = "0.32.0", default-features = false, features = ["dim3"] }
bevy_tweening = { version = "0.15.0", default-features = false }
leafwing-input-manager = { version = "0.20.0", default-features = false, features = ["mouse", "keyboard", "gamepad"] }
rand = "0.10.0"
ron = "0.12.0"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
tracing = "0.1.44"
uuid = "1.21.0"

[dev-dependencies]
approx = "0.5.1"
bevy-inspector-egui = "0.36.0"
bevy_editor_pls = "0.10.0"
bevy_framepace = "0.21.0"
bevy_mod_debugdump = "0.15.0"
bevy_screen_diagnostics = "0.8.1"
criterion = "0.8.2"
insta = "1.46.3"
pretty_assertions = "1.4.1"
proptest = "1.10.0"
rstest = "0.26.1"
tracing-subscriber = "0.3.22"
